LU-2310 quota: fix typo in find_tree_dqentry()

In find_tree_dqentry(), we should pass 'type' to quota_read_blk(),
instead of '0'.

Signed-off-by: Niu Yawei <niu@whamcloud.com>
Change-Id: Ife8afd248833b53ead017dd909359fc792db7689
Reviewed-on: http://review.whamcloud.com/4509
Tested-by: Hudson
Reviewed-by: Fan Yong <yong.fan@whamcloud.com>
Reviewed-by: Lai Siyao <laisiyao@whamcloud.com>
Reviewed-by: Johann Lombardi <johann.lombardi@intel.com>
Tested-by: Maloo <whamcloud.maloo@gmail.com>